:!toc-title:
:caution-caption: :fire:
:important-caption: :exclamation:
:note-caption: :paperclip:
:tip-caption: :bulb:
:warning-caption: :warning:
endif::[]

== Version 0.7.3
[cols="1,2,<10a", options="header"]
|===
|ID|Type|Description
|https://github.com/Axway-API-Management-Plus/yamles-utils/issues/29[#29]
|Enhancement
|File Geneator - create non-existing target directories
|===


== Version 0.7.2
[cols="1,2,<10a", options="header"]
|===
|ID|Type|Description
|https://github.com/Axway-API-Management-Plus/yamles-utils/issues/28[#28]
|Fix
|Fix `config` command.
|===


== Version 0.7.1
[cols="1,2,<10a", options="header"]
|===
|ID|Type|Description
|https://github.com/Axway-API-Management-Plus/yamles-utils/issues/26[#26]
|Fix
|Fix build pipeline.

|https://github.com/Axway-API-Management-Plus/yamles-utils/security/dependabot/4[#dependabot-4]
|Fix
|Fix json-path Out-of-bounds Write vulnerability.
|===


== Version 0.7.0
[cols="1,2,<10a", options="header"]
|===
|ID|Type|Description
|https://github.com/Axway-API-Management-Plus/yamles-utils/issues/21[#21]
|Enhancement
|Generate Files.

|https://github.com/Axway-API-Management-Plus/yamles-utils/issues/22[#22]
|Enhancement
|Evaluate Expression.

`eval` command to evaluate expression and print result to `stdout`.

Example:
[source, shell]
----
$ export NAME="World"
$ yamlesutils.sh -q eval "Hello {{ _env('NAME') }}!"
Hello World!
----
|https://github.com/Axway-API-Management-Plus/yamles-utils/issues/24[#24]
|Enhancement
|Lookup function to generate hashed ANM password.

Example:
[source, shell]
----
$ yamlesutils.sh -q eval "{{ _gen_anm_pwd_hash('changeme') }}"
$AAGQAAAAAQAC$oALW5N6CWi0PszIfVK3w5w==$uERZwFPmZ2bEknEfZiyrK7QfqcODTyjFJNrbpEQfEDI=
----
|===

== Version 0.6.0
[cols="1,2,<10a", options="header"]
|===
|ID|Type|Description
|https://github.com/Axway-API-Management-Plus/yamles-utils/issues/13[#13]
|Enhancement, Refactoring
|Lookup- and certificate providers as external plugins.
